[project]
name = "randomseedgenerator"
description = "Advanced seed generator for ComfyUI with multiple modes, state persistence, and cross-library synchronization"
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0"
]

[project.urls]
Repository = "https://github.com/Limbicnation/ComfyUI-RandomSeedGenerator"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "limbicnation"
DisplayName = "ComfyUI-RandomSeedGenerator"
Icon = "https://raw.githubusercontent.com/Limbicnation/ComfyUI-RandomSeedGenerator/main/icon.png"
includes = []
