[project]
name = "randomseedgenerator"
description = "Minimal ComfyUI seed generator with fixed, random, increment, and decrement modes. Zero dependencies."
version = "2.3.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/Limbicnation/ComfyUI-RandomSeedGenerator"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "limbicnation"
DisplayName = "ComfyUI-RandomSeedGenerator"
Icon = "https://raw.githubusercontent.com/Limbicnation/ComfyUI-RandomSeedGenerator/main/icon.png"
includes = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--confcutdir=tests --import-mode=importlib"
